# http-header-scanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  roadmap.md  v3.4_notes.md  v3.5_notes.md  v3.6_notes.md  v3.7_notes.md  v3.8_notes.md
docs/screenshots/: README.md
examples/: multi_targets.txt  sample_report.json  single_target.txt
reports/: report.html  report.json
src/: analyzer.py  config.py  constants.py  cookie_analyzer.py  display.py  exporter.py  html_report.py  logger_config.py  main.py  scanner.py  scoring.py  utils.py
static/: style.css
templates/: report.html
